k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-app-deployment
  labels:
    app: kubernetes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-app
  template:
    metadata:
      labels:
        app: kubernetes-app
    spec:
      containers:
        - name: kubenertes-app
          image: jeffersonrodrigues1992/kubernetes-app
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "256m"
              memory: 256Mi
            requests:
              cpu: "256m"
              memory: 256Mi
