k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-app
spec:
  #ClusterIP default
  selector:
    app: kubernetes-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
